kubernetes/php-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-fpm
  labels:
    app: php-fpm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-fpm
  template:
    metadata:
      labels:
        app: php-fpm
        tier: php
    spec:
      volumes:
        - name: app-code
          hostPath:
            path: /Users/valfred88/PhpstormProjects/laravel11
            type: Directory
      containers:
        - name: php-fpm
          image: valfred88/my-deal:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: app-code
              mountPath: /var/www/html
          resources:
            requests:
              memory: "128Mi"
              cpu: "150m"
            limits:
              memory: "256Mi"
              cpu: "300m"
