kubernetes/postgresql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgsql
  labels:
    app: pgsql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgsql
  template:
    metadata:
      labels:
        app: pgsql
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-storage
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: pgsql-service
spec:
  selector:
    app: pgsql
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
