kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-ksu-ingress
  labels:
    app: nginx
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "FCGI"
    nginx.ingress.kubernetes.io/fastcgi-index: "index.php"
    nginx.ingress.kubernetes.io/fastcgi-params-configmap: "dev-ksu"
spec:
  ingressClassName: nginx
  rules:
    - host: test.dev-ksu.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: php-fpm-service
                port:
                  number: 9000
